--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 <body>
 
     <nav class="navbar">
+        <ul id="navLinks"> <li onclick="router('home')">דף הבית</li>
+    <li onclick="router('videos')">סרטונים</li>
+
+    <li onclick="router('exercises')">תרגול שאלות 📝</li>
+    <li onclick="router('contact')">צור קשר</li>
+
+</ul>
         <div class="logo" onclick="router('home')">
             <i class="fa-solid fa-atom fa-spin"></i> PhysicsMaster
         </div>
@@ -39,3 +46,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
