--- a/index.html
+++ b/index.html
@@ -11,9 +11,43 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
+
+    <style>
+        #auth-ui { position: fixed; top: 20px; right: 20px; z-index: 2000; direction: rtl; font-family: sans-serif; }
+        .profile-pill { background: white; padding: 5px 15px; border-radius: 50px; display: flex; align-items: center; gap: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); border: 2px solid #3b82f6; }
+        .user-avatar { width: 35px; height: 35px; border-radius: 50%; background: #ddd; display: flex; align-items: center; justify-content: center; overflow: hidden; }
+        .user-avatar i { font-size: 1.2rem; color: #666; }
+        .modal-overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.6); display: none; justify-content: center; align-items: center; z-index: 3000; }
+        .login-box { background: white; padding: 30px; border-radius: 20px; width: 350px; text-align: center; }
+        .login-box input { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div id="auth-ui">
+        <div id="logged-in-view" style="display: none;" class="profile-pill">
+            <span id="display-name">תלמיד</span>
+            <div class="user-avatar" id="user-photo"><i class="fa-solid fa-user"></i></div>
+            <button onclick="handleLogout()" style="cursor:pointer; border:none; background:none; color:#ef4444; font-weight: bold; margin-right: 10px;">התנתק</button>
+        </div>
+        <div id="logged-out-view">
+            <button class="btn-main" onclick="toggleModal(true)" style="padding: 8px 20px; font-size: 0.9rem;">התחברות / הרשמה</button>
+        </div>
+    </div>
+
+    <div id="login-modal" class="modal-overlay">
+        <div class="login-box">
+            <h2 id="modal-title">התחברות</h2>
+            <input type="email" id="auth-email" placeholder="אימייל">
+            <input type="password" id="auth-pass" placeholder="סיסמה">
+            <button class="btn-main" id="main-auth-btn" style="width:100%" onclick="handleAuth()">שלח</button>
+            <p style="margin-top:15px; cursor:pointer; color:#3b82f6; font-size: 0.9rem;" onclick="toggleAuthMode()" id="toggle-text">אין לך חשבון? הירשם כאן</p>
+            <button onclick="toggleModal(false)" style="margin-top:10px; background:none; border:none; color:#666; cursor: pointer;">ביטול</button>
+        </div>
+    </div>
 
     <nav class="navbar">
         <div class="logo" onclick="router('home')">
