--- a/index.html
+++ b/index.html
@@ -15,14 +15,70 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
 
     <style>
-        #auth-ui { position: fixed; top: 20px; right: 20px; z-index: 2000; direction: rtl; font-family: sans-serif; }
-        .profile-pill { background: white; padding: 5px 15px; border-radius: 50px; display: flex; align-items: center; gap: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); border: 2px solid #3b82f6; }
-        .user-avatar { width: 35px; height: 35px; border-radius: 50%; background: #ddd; display: flex; align-items: center; justify-content: center; overflow: hidden; }
-        .user-avatar i { font-size: 1.2rem; color: #666; }
-        .modal-overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.6); display: none; justify-content: center; align-items: center; z-index: 3000; }
-        .login-box { background: white; padding: 30px; border-radius: 20px; width: 350px; text-align: center; }
-        .login-box input { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
-    </style>
+    /* עיצוב כפתור הפרופיל והתחברות - ממוקם בצד שמאל */
+    #auth-ui { 
+        position: fixed; 
+        top: 20px; 
+        left: 20px; /* כאן השליטה על המיקום - העברנו לשמאל */
+        z-index: 2000; 
+        direction: rtl; 
+        font-family: 'Heebo', sans-serif; 
+    }
+
+    .profile-pill { 
+        background: white; 
+        padding: 5px 15px; 
+        border-radius: 50px; 
+        display: flex; 
+        align-items: center; 
+        gap: 10px; 
+        box-shadow: 0 4px 15px rgba(0,0,0,0.1); 
+        border: 2px solid #3b82f6; 
+    }
+
+    .user-avatar { 
+        width: 35px; 
+        height: 35px; 
+        border-radius: 50%; 
+        background: #ddd; 
+        display: flex; 
+        align-items: center; 
+        justify-content: center; 
+        overflow: hidden; 
+    }
+
+    .user-avatar i { font-size: 1.2rem; color: #666; }
+
+    /* עיצוב חלון ההתחברות (Modal) */
+    .modal-overlay { 
+        position: fixed; 
+        top: 0; left: 0; 
+        width: 100%; height: 100%; 
+        background: rgba(0,0,0,0.6); 
+        display: none; 
+        justify-content: center; 
+        align-items: center; 
+        z-index: 3000; 
+    }
+
+    .login-box { 
+        background: white; 
+        padding: 30px; 
+        border-radius: 20px; 
+        width: 350px; 
+        text-align: center; 
+        box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    }
+
+    .login-box input { 
+        width: 100%; 
+        padding: 10px; 
+        margin: 10px 0; 
+        border: 1px solid #ddd; 
+        border-radius: 8px; 
+        box-sizing: border-box; 
+    }
+</style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -73,3 +129,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
