--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
 
     <style>
-    /* עיצוב כפתור הפרופיל והתחברות - ממוקם בצד שמאל */
+    /* העברנו לצד שמאל עם !important כדי לוודא שזה עובד */
     #auth-ui { 
-        position: fixed; 
-        top: 20px; 
-        left: 90px; /* כאן השליטה על המיקום - העברנו לשמאל */
-        z-index: 2000; 
-        direction: rtl; 
+        position: fixed !important; 
+        top: 20px !important; 
+        left: 20px !important; /* שינוי לשמאל */
+        right: auto !important; /* מבטל הגדרת ימין אם קיימת */
+        z-index: 9999 !important; /* מוודא שזה מעל הכל */
+        direction: rtl !important; 
         font-family: 'Heebo', sans-serif; 
     }
 
@@ -47,9 +48,7 @@
         overflow: hidden; 
     }
 
-    .user-avatar i { font-size: 1.2rem; color: #666; }
-
-    /* עיצוב חלון ההתחברות (Modal) */
+    /* עיצוב המודאל (חלון ההתחברות) */
     .modal-overlay { 
         position: fixed; 
         top: 0; left: 0; 
@@ -58,7 +57,7 @@
         display: none; 
         justify-content: center; 
         align-items: center; 
-        z-index: 3000; 
+        z-index: 10000; 
     }
 
     .login-box { 
@@ -67,7 +66,6 @@
         border-radius: 20px; 
         width: 350px; 
         text-align: center; 
-        box-shadow: 0 10px 25px rgba(0,0,0,0.2);
     }
 
     .login-box input { 
@@ -129,5 +127,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
