--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         <p>© 2024 PhysicsMaster - כל הזכויות שמורות.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
